# Space-Scum

./: .gitignore  CMakeLists.txt
config/: Settings.ini
src/: Bullet.cpp  Bullet.h  Config.h  Constants.h  Enemy.cpp  Enemy.h  Entity.h  Game.cpp  Game.h  GameMgr.cpp  GameMgr.h  GameOverState.cpp  GameOverState.h  GameState.h  GameplayState.cpp  GameplayState.h  Main.cpp  MainMenuState.cpp  MainMenuState.h  Map.h  PauseState.cpp  PauseState.h  Player.cpp  Player.h  Timer.cpp  Timer.h
src/Core/: Game.cpp  Game.h
src/Entities/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.h  Player.h
src/Managers/: ConfigManager.cpp  ConfigManager.h  GameManager.cpp  GameManager.h
src/States/: GameOverState.cpp  GameOverState.h  GameplayState.cpp  GameplayState.h  MainMenuState.h  PauseState.cpp  PauseState.h
src/utils/: Config.h
